<resources>
    <string name="app_name">Anime Tracker</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bottom_nav_home">Home</string>
    <string name="bottom_nav_favorites">Favorites</string>
    <string name="anime_title">Kimetsu no Yaiba</string>
    <string name="play">play</string>
    <string name="trending_anime_header">Trending Anime</string>
    <string name="cd">CD</string>
    <string name="error_player">There was an error initializing the YouTubePlayer (%1$s)</string>
    <string name="anime_title_text_details">BORUTO: NARUTO NEXT GENERATIONS</string>
    <string name="anime_title_jp">鬼滅の刃 遊郭編</string>
    <string name="anime_rank">1</string>
    <string name="ageRatingGuide">17+ (violence profanity)</string>
    <string name="anime_status">finished</string>
    <string name="add_to_favorites_btn">Add to Favorites</string>
    <string name="anime_description">Gol D. Roger was known as the Pirate King, the strongest and most infamous being to have sailed the Grand Line. The capture and death of Roger by the World Government brought a change throughout the world. His last words before his death revealed the existence of the greatest treasure in the world, One Piece. It was this revelation that brought about the Grand Age of Pirates, men who dreamed of finding One Piece—which promises an unlimited amount of riches and fame—and quite possibly the pinnacle of glory and the title of the Pirate King.\nEnter Monkey D. Luffy, a 17-year-old boy who defies your standard definition of a pirate. Rather than the popular persona of a wicked, hardened, toothless pirate ransacking villages for fun, Luffy’s reason for being a pirate is one of pure wonder: the thought of an exciting adventure that leads him to intriguing people and ultimately, the promised treasure. Following in the footsteps of his childhood hero, Luffy and his crew travel across the Grand Line, experiencing crazy adventures, unveiling dark mysteries and battling strong enemies, all in order to reach the most coveted of all fortunes—One Piece.\n[Written by MAL Rewrite]</string>
    <string name="episode_title">E2 - Infiltrating the Entertainment District</string>
    <string name="most_popular">Most Pupular</string>
    <string name="most_rated">Most Rated</string>
    <string name="fragment_favorites_label">Favorites</string>
</resources>